# pascal_compilador

./: .gitignore  CMakeLists.txt  Makefile  gramatica.ebnf  main.cpp  make.py  run_tests.ps1
src/ast/: exp.cpp  exp.h  program.cpp  program.h  stmt.cpp  stmt.h
src/enviroment/: enviroment.h
src/parser/: parser.cpp  parser.h
src/scanner/: scanner.cpp  scanner.h
src/tokens/: token.cpp  token.h
src/visitors/: visitor.cpp  visitor.h
test/asm/: control1.s  control2.s  control3.s  control4.s  control5.s  control6.s  exp1.s  exp2.s  exp3.s  func1.s  func2.s  func3.s  longint1.s  longint2.s  longint3.s  longint4.s  longint5.s  megatest1.s  megatest2.s  uint1.s  uint2.s  uint3.s  uint4.s  uint5.s  vardec1.s  vardec2.s  vardec4.s
test/test/: control1.pas  control2.pas  control3.pas  control4.pas  control5.pas  control6.pas  exp1.pas  exp2.pas  exp3.pas  func1.pas  func2.pas  func3.pas  longint1.pas  longint2.pas  longint3.pas  longint4.pas  longint5.pas  longint_juan.pas  megatest1.pas  megatest2.pas  uint1.pas  uint2.pas  uint3.pas  uint4.pas  uint5.pas  vardec1.pas  vardec2.pas  vardec3_err.pas  vardec4.pas
